--- a/app/src/main/res/layout/dialog_comment_post.xml
+++ b/app/src/main/res/layout/dialog_comment_post.xml
@@ -6,6 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/dCommentPost_tvNothing"
+        android:text="Nothing to show here, add first comment"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
         android:text="Comment"
         android:textSize="18sp"
         android:textColor="#090909"
