--- a/app/src/main/res/layout/dialog_add_content.xml
+++ b/app/src/main/res/layout/dialog_add_content.xml
@@ -45,17 +45,23 @@
             android:id="@+id/dAddContent_btnAdd"
             android:text="Add"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="#FFFFFF"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/dAddContent_btnClear"
             android:text="Clear"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="#FFFFFF"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/dAddContent_btnCancel"
             android:text="Cancel"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="#FFFFFF"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
