--- a/app/src/main/res/layout/dialog_add_feedback.xml
+++ b/app/src/main/res/layout/dialog_add_feedback.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/dAddFeedback_tvTitle"
+        android:text="Send Feedback"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/nabila"
+        android:textColor="@color/colorPrimary"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/dAddFeedback_tvMessage"
+        android:background="@drawable/border_tv"
+        android:layout_below="@+id/dAddFeedback_tvTitle"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="3dp"
         android:text="@string/feedback"
         android:textStyle="bold"
         android:textSize="16sp"
@@ -14,10 +28,10 @@
 
     <EditText
         android:id="@+id/dAddFeedback_etFeedback"
-        android:layout_below="@+id/dAddFeedback_tvTitle"
+        android:layout_below="@+id/dAddFeedback_tvMessage"
         android:layout_toLeftOf="@+id/dAddFeedback_imgPost"
         android:layout_marginRight="5dp"
-        android:hint="góp ý của bạn"
+        android:hint="Add your feedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <ImageView
