--- a/app/src/main/res/layout/dialog_censorship.xml
+++ b/app/src/main/res/layout/dialog_censorship.xml
@@ -9,6 +9,7 @@
         android:fitsSystemWindows="true">
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
+            android:paddingHorizontal="3dp"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:background="#FFFFFF"
@@ -138,6 +139,7 @@
 
     <ListView
         android:id="@+id/dCensorship_lvContent"
+        android:paddingHorizontal="3dp"
         android:dividerHeight="10dp"
         android:background="#FFFFFF"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
