--- a/app/src/main/res/layout/dialog_content_post.xml
+++ b/app/src/main/res/layout/dialog_content_post.xml
@@ -5,8 +5,16 @@
     android:padding="5dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
+    <TextView
+        android:id="@+id/dContentPost_tvNothing"
+        android:text="Nothing to show here"
+        android:textColor="#090909"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/dContentPost_tvDone"
         android:text="Done"
