--- a/app/src/main/res/layout/dialog_edit_info.xml
+++ b/app/src/main/res/layout/dialog_edit_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:paddingHorizontal="3dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -20,57 +21,74 @@
         android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/dEditInfo_etName"
-        android:hint="Họ Tên"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/border_tv"
+        android:hint="Display Name"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
     <EditText
         android:id="@+id/dEditInfo_etPass"
-        android:hint="Mật Khẩu"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/border_tv"
+        android:hint="Password"
         android:inputType="textPassword"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
     <EditText
         android:id="@+id/dEditInfo_etDOB"
-        android:hint="Ngày Sinh"
+        android:hint="Birthday"
         android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/border_tv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
     <EditText
         android:id="@+id/dEditInfo_etPhone"
-        android:hint="Số Điện Thoại"
+        android:hint="Phone Numbers"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/border_tv"
         android:gravity="center"
         android:inputType="number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
     <EditText
         android:id="@+id/dEditInfo_etAddress"
-        android:hint="Địa Chỉ"
+        android:hint="Address"
+        android:paddingVertical="3dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/border_tv"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/dEditInfo_btnUpdate"
-            android:text="HOÀN TẤT"
+            android:backgroundTint="#4AA6EC"
+            android:textColor="#FFFFFF"
+            android:text="UPDATE"
             android:textSize="12sp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/dEditInfo_btnClear"
-            android:text="LÀM MỚI"
+            android:text="CLEAR"
+            android:backgroundTint="#4AA6EC"
+            android:textColor="#FFFFFF"
             android:textSize="12sp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/dEditInfo_btnCancel"
-            android:text="HỦY"
+            android:text="Cancel"
+            android:backgroundTint="#4AA6EC"
+            android:textColor="#FFFFFF"
             android:textSize="12sp"
             android:layout_weight="1"
             android:layout_width="0dp"
