--- a/app/src/main/res/layout/fragment_accommodations.xml
+++ b/app/src/main/res/layout/fragment_accommodations.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.Fragment_Restaurant">
+    <TextView
+        android:id="@+id/fAccommodations_tvNothing"
+        android:text="Nothing to show here"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/fAccommodations_tvTitle"
