--- a/app/src/main/res/layout/fragment_censorship.xml
+++ b/app/src/main/res/layout/fragment_censorship.xml
@@ -8,22 +8,32 @@
 
     <TextView
         android:id="@+id/fCensorship_tvTitle"
-        android:text="Số bài viết đang chờ kiểm duyệt:   "
+        android:text="Censorship"
         android:layout_marginTop="5dp"
-        android:textSize="18sp"
+        android:fontFamily="@font/nabila"
+        android:textSize="25sp"
         android:textColor="#0C4F81"
         android:layout_marginLeft="3dp"
+        android:layout_centerHorizontal="true"
         android:textStyle="bold"
-        android:textAllCaps="true"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/fCensorship_tvNothing"
+        android:text="Nothing to show here"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/fCensorship_tvNumber"
         android:text="0"
         android:layout_toRightOf="@+id/fCensorship_tvTitle"
         android:layout_marginTop="5dp"
-        android:textSize="18sp"
-        android:textColor="#0C4F81"
+        android:textSize="16sp"
+        android:textColor="#F80321"
         android:textAllCaps="true"
         android:layout_marginLeft="3dp"
         android:textStyle="bold"
@@ -31,7 +41,7 @@
         android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/fCensorship_lvPost"
-        android:layout_below="@+id/fCensorship_tvNumber"
+        android:layout_below="@+id/fCensorship_tvTitle"
         android:layout_marginTop="3dp"
         android:dividerHeight="10dp"
         android:layout_width="match_parent"
