--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -140,7 +140,7 @@
         <androidx.appcompat.widget.Toolbar
             app:layout_collapseMode="pin"
             android:layout_width="match_parent"
-            android:background="#FFFFFF"
+            android:background="#C8C7C7"
             android:layout_height="20dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
