--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -4,11 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.Fragment_Feedback">
+    <TextView
+        android:id="@+id/fFeedback_tvNothing"
+        android:text="Nothing to show here"
+        android:textColor="#090909"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/fFeedback_tvTitle"
-        android:text="Feedback Của Người Dùng"
-        android:textSize="18sp"
+        android:text="User Feedback"
+        android:fontFamily="@font/nabila"
+        android:textColor="@color/colorPrimary"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -16,7 +28,7 @@
     <ListView
         android:id="@+id/fFeedback_lvFeedback"
         android:layout_below="@+id/fFeedback_tvTitle"
-        android:dividerHeight="5dp"
+        android:dividerHeight="10dp"
         android:divider="@color/fui_transparent"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
