--- a/app/src/main/res/layout/fragment_journey_diary.xml
+++ b/app/src/main/res/layout/fragment_journey_diary.xml
@@ -5,9 +5,18 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.Fragment_Restaurant">
+    <TextView
+        android:id="@+id/fJDiary_tvNothing"
+        android:text="Nothing to show here"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/fBlog_tvTitle"
+        android:id="@+id/fJDiary_tvTitle"
         android:text="Journey Diary"
         android:layout_marginTop="3dp"
         android:fontFamily="@font/nabila"
@@ -18,15 +27,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <ListView
-        android:id="@+id/fBlog_lvPost"
+        android:id="@+id/fJDiary_lvPost"
         android:dividerHeight="10dp"
         android:divider="@color/fui_transparent"
         android:layout_marginTop="3dp"
-        android:layout_below="@+id/fBlog_tvTitle"
+        android:layout_below="@+id/fJDiary_tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fBlog_fabAddPost"
+        android:id="@+id/fJDiary_fabAddPost"
         android:background="#34A8FF"
         android:src="@drawable/add_post"
         android:layout_marginBottom="3dp"
