--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -4,10 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.Fragment_PostListAdmin">
+   <TextView
+       android:id="@+id/fPostList_tvTile"
+       android:text="Post List"
+       android:textSize="25sp"
+       android:textStyle="bold"
+       android:fontFamily="@font/nabila"
+       android:textColor="@color/colorPrimary"
+       android:layout_centerHorizontal="true"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/>
+   <TextView
+       android:id="@+id/fPostList_tvNothing"
+       android:text="Nothing to show here"
+       android:textSize="20sp"
+       android:textStyle="bold"
+       android:gravity="center"
+       android:layout_centerInParent="true"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"/>
 
    <ListView
        android:id="@+id/fPostList_lvPost"
        android:dividerHeight="10dp"
+       android:layout_marginTop="3dp"
+       android:layout_below="@+id/fPostList_tvTile"
        android:divider="@color/fui_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
