--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -12,9 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="25sp"
+        android:fontFamily="@font/nabila"
+        android:textColor="@color/colorPrimary"
         android:gravity="center"
-        android:text="DANH SÁCH THÀNH VIÊN" />
+        android:text="User List" />
 
     <ListView
         android:id="@+id/fUserList_lvUser"
