--- a/app/src/main/res/layout/raw_feedback.xml
+++ b/app/src/main/res/layout/raw_feedback.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         app:contentPadding="5dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/raw_feedback_imgAvatar"
         android:backgroundTint="#EBEBEC"
         app:cardCornerRadius="10dp">
