--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,10 @@
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/main_Navigation"
         app:headerLayout="@layout/drawer_header"
+        app:itemTextColor="@color/colorPrimaryDark"
+        app:itemIconTint="@color/colorPrimaryDark"
         android:layout_gravity="start"
+        app:itemIconPadding="10dp"
         android:theme="@style/NavigationTheme"
         app:menu="@menu/menu_drawer"
         android:layout_width="wrap_content"
