--- a/app/src/main/res/layout/fragment_censorship.xml
+++ b/app/src/main/res/layout/fragment_censorship.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/nabila"
         android:textSize="25sp"
-        android:textColor="#0C4F81"
+        android:textColor="@color/colorPrimary"
         android:layout_marginLeft="3dp"
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
