--- a/app/src/main/res/layout/dialog_edit_info.xml
+++ b/app/src/main/res/layout/dialog_edit_info.xml
@@ -38,7 +38,7 @@
         android:layout_height="40dp"/>
     <EditText
         android:id="@+id/dEditInfo_etDOB"
-        android:hint="Birthday"
+        android:hint="Birthday (Account Recovery)"
         android:gravity="center"
         android:layout_marginTop="5dp"
         android:background="@drawable/border_tv"
@@ -46,7 +46,7 @@
         android:layout_height="40dp"/>
     <EditText
         android:id="@+id/dEditInfo_etPhone"
-        android:hint="Phone Numbers"
+        android:hint="Phone Numbers (Account Recovery)"
         android:layout_marginTop="5dp"
         android:background="@drawable/border_tv"
         android:gravity="center"
