--- a/app/src/main/res/layout/dialog_add_content.xml
+++ b/app/src/main/res/layout/dialog_add_content.xml
@@ -6,9 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/dAddContent_tvTitle"
-        android:text="ADD CONTENT"
+        android:text="Add Content"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:fontFamily="@font/nabila"
         android:layout_marginTop="5dp"
         android:textColor="@color/colorPrimary"
@@ -41,25 +41,29 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/dAddContent_btnAdd"
             android:text="Add"
+            app:cornerRadius="10dp"
             android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="#FFFFFF"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/dAddContent_btnClear"
             android:text="Clear"
+            app:cornerRadius="10dp"
+            android:layout_marginHorizontal="5dp"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="#FFFFFF"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/dAddContent_btnCancel"
             android:text="Cancel"
+            app:cornerRadius="10dp"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="#FFFFFF"
             android:layout_weight="1"
