--- a/app/src/main/res/layout/dialog_comment_post.xml
+++ b/app/src/main/res/layout/dialog_comment_post.xml
@@ -49,7 +49,7 @@
             android:layout_height="40dp"/>
         <ImageView
             android:id="@+id/dCommentPost_imgPost"
-            android:src="@drawable/post"
+            android:src="@drawable/ic_send_black_24dp"
             android:layout_weight="2"
             android:layout_gravity="center_vertical"
             android:layout_width="0dp"
