--- a/app/src/main/res/layout/dialog_edit_comment.xml
+++ b/app/src/main/res/layout/dialog_edit_comment.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"/>
     <ImageView
         android:id="@+id/dEditComment_imgPost"
-        android:src="@drawable/post"
+        android:src="@drawable/ic_send_black_24dp"
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@+id/dEditComment_etComment"
         android:layout_width="40dp"
