--- a/app/src/main/res/layout/dialog_longclick.xml
+++ b/app/src/main/res/layout/dialog_longclick.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#DBDBD8"
+    android:padding="3dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -19,20 +20,24 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/dLongClick_btnEdit"
+            app:cornerRadius="10dp"
             android:text="EDIT"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/dLongClick_btnDelete"
             android:text="delete"
+            app:cornerRadius="10dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/dLongClick_btnCancel"
+            app:cornerRadius="10dp"
             android:text="cancel"
             android:layout_weight="1"
             android:layout_width="0dp"
