--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#61BBFF"
+    android:background="@color/colorAccent"
     android:layout_width="match_parent"
     android:layout_height="140dp">
 
