--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:paddingHorizontal="3dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -83,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/fDetail_imgPost"
                 android:text="@string/title"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -92,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/fDetail_tvTitle"
                 android:text="@string/address"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -102,7 +103,7 @@
                 android:layout_below="@+id/fDetail_tvAddress"
                 android:layout_marginBottom="3dp"
                 android:text="@string/descriptions"
-                android:textSize="13sp" />
+                android:textSize="16sp" />
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
