--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -35,8 +35,10 @@
         android:layout_height="wrap_content"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fRestaurant_fabAddPost"
-        android:background="#34A8FF"
-        android:src="@drawable/add_post"
+        android:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/ic_add_white"
+        app:maxImageSize="30dp"
+        app:tint="@android:color/white"
         android:layout_marginBottom="3dp"
         android:layout_marginRight="3dp"
         app:fabSize="mini"
