--- a/app/src/main/res/layout/raw_comment.xml
+++ b/app/src/main/res/layout/raw_comment.xml
@@ -21,6 +21,12 @@
         android:layout_toRightOf="@+id/raw_comment_imgAvatar"
         android:backgroundTint="#EBEBEC"
         app:cardCornerRadius="10dp">
+        <ImageView
+            android:id="@+id/raw_comment_imgMore"
+            android:src="@drawable/ic_more_horiz_black_24dp"
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/raw_comment_tvEmail"
             android:layout_width="wrap_content"
@@ -30,16 +36,6 @@
             android:text="nhan@gmail.com"
             android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/raw_comment_tvPubDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="end"
-            android:text="30/03/2020 21:11"
-            android:textSize="12sp"
-            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/raw_comment_tvComment"
@@ -50,12 +46,16 @@
             android:textSize="15sp"
             android:layout_marginHorizontal="5dp"
             android:hint="Comment 1 2 4 5  6 7" />
-        <ImageView
-            android:id="@+id/raw_comment_imgMore"
-            android:src="@drawable/ic_more_horiz_black_24dp"
-            android:layout_gravity="right|bottom"
+        <TextView
+            android:id="@+id/raw_comment_tvPubDate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="bottom|end"
+            android:text="30/03/2020 21:11"
+            android:textSize="12sp"
+            android:textStyle="italic" />
 
     </androidx.cardview.widget.CardView>
 
